Fix toggle z-index collision with homepage (#989)

--- a/sitemedia/scss/components/_controls.scss
+++ b/sitemedia/scss/components/_controls.scss
@@ -55,7 +55,7 @@ label#theme-toggle {
     }
     @include breakpoints.for-desktop-up {
         position: fixed;
-        z-index: 1;
+        z-index: 2;
         top: 247px;
     }
     input + span::before {
