--- a/sitemedia/scss/components/_transcription.scss
+++ b/sitemedia/scss/components/_transcription.scss
@@ -7,7 +7,7 @@
 @use "../components/searchform";
 
 #itt-panel {
-    z-index: 2;
+    z-index: 3;
     max-width: none;
     width: 100%;
     display: flex;
